version 0.8:
 - Removed support for non-standard "mode" attribute in "system" elements.
   It just wasn't worth breaking the AIML standard for.

version 0.7:
 - Further improved AIML parsing; missing or invalid XML attributes are now
   detected at parse-time.  There's also a first stab at support for Forward
   Compatibility Mode: if the "version" attribute of an AIML tag is not 1.0.1,
   the parser is much more forgiving of unknown or missing XML tags and attributes.
 - Added "support" for the 'gossip' tag.  The specific behavior of this tag is
   totally undefined; currently, the PyAIML implementation treats it as a big
   no-op.  Its contents are ignored, and it returns the empty string (but at least
   it isn't flagged as a syntax error!) 
 - Oops; I've implemented 'person' as 'person2' and vice versa this whole time!
   Swapped them back; they should each behave correctly now.
 - A bit of code cleanup, with an emphasis on using proper XML/AIML terminology
   whenever possible.
 - Fixed some exception-masking in the 'condition' element processor, which could
   prevent AIML parse errors from being reported.
 - Added full support for the "bot" tag (previously only the 'bot name="name"'
   form was supported).  Bot predicates are set using the Kernel.setBotPredicate()
   function.  Note that Kernel.getBotName() and Kernel.setBotName() have been
   deprecated, and will disappear in a future release.

version 0.6.1:
 - Fixed undefined variable exception that was thrown whenever there was no
   match for the user's input.
 - Fixed an infinite recursion bug caused by processing two or more nested
   'srai' or 'sr' elements.

version 0.6
 - Completely rewrote the LearnHandler class (which handles all AIML parsing)
   to be much less forgiving of incorrect AIML.  Currently, any AIML errors
   outside of "template" elements should be caught and reported at load-time.
   AIML errors inside templates are still not detected until run-time.